Document entire repository and update README